# Lovable_To_SEO

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
anton/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
anton/api/: server.ts
anton/peec-ai-research/: agent-design.md  marketing-skills.md  strategy.md
anton/scripts/: prompts.ts
anton/src/: detector.ts  fetcher.ts  types.ts
anton/src-competitors/: index.ts
anton/src-context/: index.ts  tavily.ts  types.ts
anton/src-gatekeeper/: index.ts  types.ts
anton/src-prompts/: aggregator.ts  curator.ts  index.ts  llm.ts  subagent.ts  types.ts
apps/api/: package.json
apps/landing/: README.md  package.json  vite.config.ts
docs/: ARCHITECTURE.md  GEO_PRINCIPLES.md  POSITIONING.md
docs/peec-research/: PLAN.md  extraction-strategy.md  generation-strategy.md  peec-api.md
domain-peec-enrichment/: .env.example  .gitignore  CLAUDE.md  README.md  run.sh
domain-peec-enrichment/py/: requirements.txt
domain-peec-enrichment/ts/: .gitignore  BACKLOG.md  CLAUDE.md  package.json  tsconfig.json
examples/attio/: README.md  peec-fixture.json
examples/founder-mvp/: README.md  baked-scan.json  peec-fixture.json  snapshot_attio_2026-04-25.json
peec-onboarder/: .env.example  README.md
peec-onboarder/docs/: INITIAL_DOMAIN_ENRICHMENT.md
peec-onboarder/examples/: snapshot_attio_2026-04-25.json
peec-onboarder/research/: anton_runner.py  (+5 more)
skills/: README.md
src/: cli.ts
web/: README.md  v1-peec.md  v2-lovable.md  v3-seo-classic.md
(+85 files in other folders)
